BLUTH, CHANGES

#### 0.6.0 (2010-12-22) ###############################



#### 0.5.3 (2010-12-17) ###############################

* CHANGE: requires Familia 0.5.3

#### 0.5.2 (2010-12-10) ###############################

Initial public release
