@@ -2,6 +2,7 @@ BLUTH, CHANGES
 
 #### 0.6.0 (2010-12-22) ###############################
 
+* CHANGE: Now depends on Familia 0.6
 
 
 #### 0.5.3 (2010-12-17) ###############################
